# gossip-glomers

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: audit.yml  auto-merge.yml  ci.yml  release.yml  test-broadcast.yml  test-counter.yml  test-echo.yml  test-kafka.yml  test-unique-ids.yml  test.yml
broadcast/: Cargo.toml
broadcast/src/: ids_seen_by_neighbours.rs  main.rs  node.rs  payload.rs
counter/: Cargo.toml
counter/src/: counter.rs  main.rs  node.rs  payload.rs
echo/: Cargo.toml
echo/src/: main.rs  node.rs  payload.rs
kafka/: Cargo.toml
kafka/src/: lib.rs  main.rs  node.rs  payload.rs
kafka/src/log/: log_message.rs  log_offset.rs  logs.rs  messages.rs  mod.rs
kafka/tests/: test.rs
protocol/: Cargo.toml
protocol/src/: gossip.rs  lib.rs
protocol/src/messages/: body.rs  message.rs  message_id.rs  mod.rs
protocol/src/nodes/: mod.rs  node.rs  node_id.rs
src/: error.rs  main.rs  message.rs  node.rs  request.rs  response.rs  server.rs
src/g_counter/: main.rs  message.rs  node.rs
src/kafka/: main.rs  message.rs  node.rs
src/kafka/log/: log.rs  log_entries.rs  log_entry.rs  log_key.rs  logs.rs  mod.rs  offsets.rs  single_log.rs
tests/: Cargo.toml  maelstrom.rs
tests/tests/: maelstrom.rs
unique-ids/: Cargo.toml
unique-ids/src/: main.rs  node.rs  payload.rs
