[workspace]

members = [
    "broadcast",
    "counter",
    "echo",
    "kafka",
    "protocol",
    "tests",
    "unique-ids",
]

[workspace.dependencies]
color-eyre = "0.6.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.test]
opt-level = 3